<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg_paper"
>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding"
    >
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:textSize="@dimen/textsize_title"
                android:text="TODO"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
        />

        <TextView android:layout_width="26dp" android:layout_height="26dp"
                  android:id="@+id/setting"
                  android:background="@drawable/ic_settings_black_24dp"
                  android:layout_alignParentEnd="true"
                  android:layout_centerVertical="true"
        />
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/settingLayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/thirty_white_trans"
            android:layout_height="wrap_content">
        <LinearLayout
                android:id="@+id/typeLayout"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/common_padding"
                android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/textsize_normal"
                    android:text=" 类型: "
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
            />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/todoType1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textsize_small"
                    android:text="@string/type1"
                    android:gravity="center"
                    android:textColor="@color/todo_type_text_color_sel"
                    android:layout_height="wrap_content"
            />
            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/todoType2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textsize_small"
                    android:text="@string/type2"
                    android:gravity="center"
                    android:textColor="@color/todo_type_text_color_sel"
                    android:layout_height="wrap_content"
            />
            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/todoType3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textsize_small"
                    android:text="@string/type3"
                    android:gravity="center"
                    android:textColor="@color/todo_type_text_color_sel"
                    android:layout_height="wrap_content"
            />
            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/todoType4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textsize_small"
                    android:text="@string/type4"
                    android:gravity="center"
                    android:textColor="@color/todo_type_text_color_sel"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/orderLayout"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/common_padding"
                android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/textsize_normal"
                    android:text=" 排序: "
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
            />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/todoOrder1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textsize_small"
                    android:text="@string/order1"
                    android:gravity="center"
                    android:textColor="@color/todo_type_text_color_sel"
                    android:layout_height="wrap_content"
            />
            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/todoOrder2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textsize_small"
                    android:text="@string/order2"
                    android:gravity="center"
                    android:textColor="@color/todo_type_text_color_sel"
                    android:layout_height="wrap_content"
            />
            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/todoOrder3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textsize_small"
                    android:text="@string/order3"
                    android:gravity="center"
                    android:textColor="@color/todo_type_text_color_sel"
                    android:layout_height="wrap_content"
            />
            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/todoOrder4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textsize_small"
                    android:text="@string/order4"
                    android:gravity="center"
                    android:textColor="@color/todo_type_text_color_sel"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/statusLayout"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/common_padding"
                android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/textsize_normal"
                    android:text=" 状态: "
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
            />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/todoStatus1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textsize_small"
                    android:text="@string/status1"
                    android:gravity="center"
                    android:textColor="@color/todo_type_text_color_sel"
                    android:layout_height="wrap_content"
            />
            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/todoStatus2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textsize_small"
                    android:text="@string/status2"
                    android:gravity="center"
                    android:textColor="@color/todo_type_text_color_sel"
                    android:layout_height="wrap_content"
            />

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/textsize_normal"
                    android:text=" 优先级: "
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
            />
            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/todoPriority"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/textsize_small"
                    android:gravity="center"
                    android:inputType="number"
                    android:textColor="@color/todo_type_text_color_sel"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>